fixed a few typos in french manpage

--- a/man/fr/man1/hyg-usb.1
+++ b/man/fr/man1/hyg-usb.1
@@ -5,11 +5,11 @@ hyg-usb \- Outil en ligne de commande pour le contrôle d'un périphérique hyg-
 hyg-usb [\-h] [\-v] [\-T] [\-H] [\-R] [\-Y] [\-G] 
         [\-r mode_led] [\-y mode_led] [\-g mode_led]
 .SH DESCRIPTION
-hyg-usb est un petit capteur de température et d'humidité relative que vous pouvez modifier à volontée.
+hyg-usb est un petit capteur de température et d'humidité relative que vous pouvez modifier à volonté.
 Cette interface en ligne de commande permet de consulter les valeurs mesurées et de contrôler interactivement
 les 3 Leds du périphérique.
 .PP
-Chaque Led peut être réglée seloon 3 modes de fonctionnement ; ON, OFF et AUTO. Quand elle est rêglée sur AUTO,
+Chaque Led peut être réglée selon 3 modes de fonctionnement : ON, OFF et AUTO. Quand elle est réglée sur AUTO,
 une LED brillera à chaque fois qu'une nouvelle mesure est effectuée par le capteur.
 .SH OPTIONS
 .TP
@@ -17,7 +17,7 @@ une LED brillera à chaque fois qu'une nouvelle mesure est effectuée par le cap
 affiche un petit texte d'aide
 .TP
 \-v
-affiche le numérod e version
+affiche le numéro de version
 .TP
 \-T
 affiche la température courante en degré Celcius
