Add CSV and JSON output mode for measurements and leds status

--- a/man/fr/man1/hyg-usb.1
+++ b/man/fr/man1/hyg-usb.1
@@ -46,6 +46,12 @@ configure le mode de fonctionnement de la led jaune ( mode_led peut être : ON,O
 \-s bus:device
 filtre les périphériques par leur bus et/ou leur position (numérotation commençant à 1,
 0 désactive le filtre).
+.TP
+\-c
+affiche toute les informations sous forme de ligne CSV.
+.TP
+\-j
+affiche toute les informations sous forme JSON.
 
 .PP
 Lancé sans option, hyg-usb affichera la température et l'humidité relative
