--- a/man/man1/hyg-usb.1
+++ b/man/man1/hyg-usb.1
@@ -45,6 +45,12 @@ set mode for yellow led ( can be ON,OFF or AUTO )
 .TP
 \-s bus:device
 select device(s) based on bus number and/or device number (0 mean any).
+.TP
+\-c
+display as CSV.
+.TP
+\-j
+display as JSON.
 
 .PP
 when used without any option, hyg-usb will display temperature and relative humidity.
